log
mi., 26 de mar. de 2025  1:19:38: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
 tests:  0|0
25021aa
mi., 26 de mar. de 2025  1:20:48: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
223cfa8
mi., 26 de mar. de 2025  1:46:47: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
2dcf2d0
mi., 26 de mar. de 2025  1:51:54: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a9544ae
mi., 26 de mar. de 2025  1:54:22: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
580b164
mi., 26 de mar. de 2025  1:56:31: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c:59:2: error: expected identifier or '(' before '.' token
   59 | }.
      |  ^
Compilation failed
7ba26f7
mi., 26 de mar. de 2025  1:57:25: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
a27095b
mi., 26 de mar. de 2025  1:58:01: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a4bb678
mi., 26 de mar. de 2025 13:56:53: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:42:44: error: 'return' with no value, in function returning non-void [-Wreturn-mismatch]
   42 |     if(list == NULL || list->head == NULL) return;
      |                                            ^~~~~~
list.c:41:8: note: declared here
   41 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c: In function 'nextList':
list.c:48:44: error: 'return' with no value, in function returning non-void [-Wreturn-mismatch]
   48 |     if(list == NULL || list->head == NULL) return;
      |                                            ^~~~~~
list.c:47:8: note: declared here
   47 | void * nextList(List * list) {
      |        ^~~~~~~~
Compilation failed
f79bd13
mi., 26 de mar. de 2025 13:58:00: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e8208fe
mi., 26 de mar. de 2025 14:01:37: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6900b7c
mi., 26 de mar. de 2025 14:07:44: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
ece3068
mi., 26 de mar. de 2025 14:09:09: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
7c57420
mi., 26 de mar. de 2025 14:09:59: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fd6c2af
mi., 26 de mar. de 2025 14:11:53: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
4306c45
mi., 26 de mar. de 2025 14:12:29: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cc3d5fd
mi., 26 de mar. de 2025 14:19:50: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
1857b32
mi., 26 de mar. de 2025 14:21:11: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:64:11: error: unused variable 'newNode' [-Werror=unused-variable]
   64 |     Node* newNode = createNode(data);
      |           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5e29ea7
mi., 26 de mar. de 2025 14:22:09: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
0c30add
mi., 26 de mar. de 2025 14:23:10: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
ae1837f
mi., 26 de mar. de 2025 14:25:03: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4810dd4
